feat: validating all fields, using localStorage

--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -95,7 +95,7 @@
                 </fieldset>
 
                 <div>
-                    <input value="Avançar" class="formulario__botao" id="enviar" data-botao-enviar>
+                    <input value="Avançar" class="formulario__botao" id="enviar" type="submit" data-botao-enviar>
                     <span class="mensagem-erro"></span>
                 </div>
             </form>
